fix: Correct spelling and formatting in hero section of Dutch translations

--- a/translations/nl.json
+++ b/translations/nl.json
@@ -15,8 +15,8 @@
   },
   "hero": {
     "trustedBy": "Vertrouwd door 500+ bedrijven",
-    "title": "Naadloze logistiek- en fulfilmentoplossingen",
-    "titleHighlight": "Fulfilment",
+    "title": "Naadloze logistiek- en fulfilment oplossingen",
+    "titleHighlight": "fulfilment",
     "subtitle": "Verbind merken, fabrikanten en logistieke dienstverleners in Europa en het VK met ons geavanceerde multi-carrier platform.",
     "getStarted": "Begin vandaag nog",
     "viewApiDocs": "Bekijk API-documentatie",
